Multiple database connection management in progress