@@ -30,6 +30,21 @@ Upon launching the application:
 3. Execute Queries: Use the main panel to execute SQL queries and view results.
 
 
+# Development
+
+If you are using IntelliJ IDEA then you can
+In Run → Edit Configurations for your MainApplication run config:
+
+1. Main class = org.fxsql.MainApplication (or the correct package).
+2. Use classpath of module = fxdb-ui (not the root project, not fxdb-db/core).
+3. Working directory = default or the project root is typically fine.
+
+In the same run configuration, under VM options:
+```text
+--module-path "C:\maven\javafx-sdk-17.0.14\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics
+```
+
+
 # Contributing
 Contributions are welcome! Please fork the repository and submit a pull request with your changes. Ensure that your code adheres to the project's coding standards and includes appropriate tests.
 
